...
  final TextEditingController _durationController = TextEditingController();


  //final List<String> _transportTypes = ['Bus', 'Train', 'Car', 'Ferry'];
  final Map<String, IconData> _transportIcons = {
    'Bus': Icons.directions_bus,
    'Treno': Icons.train,
    'Auto': Icons.directions_car,
    'Traghetto': Icons.directions_boat,
  };


  @override
...
      key: _formKey,
      child: SingleChildScrollView(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            TextFormField(
              key: const Key('departurePlaceField'),
              controller: departurePlaceController,
              decoration: const InputDecoration(labelText: "Luogo di partenza", prefixIcon: Icon(Icons.location_on_outlined)),
              validator: (value) => value!.isEmpty ? "Inserisci un luogo di partenza" : null,
            ),
            const SizedBox(height: 20),

            TextFormField(
              key: const Key('arrivalPlaceField'),
              controller: arrivalPlaceController,
              decoration: const InputDecoration(labelText: "Destinazione", prefixIcon: Icon(Icons.flag_outlined)),
              validator: (value) => value!.isEmpty ? "Inserisci una destinazione" : null,
            ),
            const SizedBox(height: 20),

...
                // Time Picker
                Expanded(
                  child: GestureDetector(
                    onTap: _selectDepartureTime,
                    child: AbsorbPointer(
                      child: TextFormField(
                        key: const Key('departureTimeField'),
                        readOnly: true,
                        decoration: const InputDecoration(
                          labelText: "Ora",
                          prefixIcon: Icon(Icons.access_time),
                        ),
                        controller: TextEditingController(
...
                ),
              ],
            ),
            const SizedBox(height: 20),

            DropdownButtonFormField<String>(
              key: const Key('transportTypeDropdown'),
              value: _selectedType,
              items: _transportIcons.keys.map((type) {
                return DropdownMenuItem(
                  value: type,
                  child: Row(
                    children: [
...
            ),

            const SizedBox(height: 20),

            // Costo (opzionale)
            TextFormField(
              key: const Key('costField'),
              controller: costController,
              keyboardType: TextInputType.number,
              decoration: InputDecoration(
                labelText: 'Costo (opzionale)',
                prefixIcon: Padding(
                  padding: const EdgeInsets.only(left: 8.0, right: 4.0),
                  child: DropdownButton<String>(
                    key: const Key('currencyDropdown'),
                    alignment: Alignment.center,
                    value: _selectedCurrency,
                    items: _currencies.map((currency) {
                      return DropdownMenuItem(
                        alignment: Alignment.center,
                        value: currency,
...
                return null;
              },
            ),
            const SizedBox(height: 20),

            TextFormField(
              key: const Key('durationField'),
              controller: _durationController,
              readOnly: true,
              decoration: const InputDecoration(
                labelText: 'Durata (opzionale)',
                prefixIcon: Icon(Icons.timer_outlined),
                hintText: 'Seleziona durata',
...
              },
            ),
            const SizedBox(height: 20),


            ElevatedButton(
              key: const Key('submitButton'),
              onPressed: _submitForm,
              style: ElevatedButton.styleFrom(
                minimumSize: const Size(double.infinity, 50),
              ),
              child: const Text("Aggiungi trasporto"),
            ),
...
            builder: (context) => AlertDialog(
              title: const Text('Errore'),
              content: Text(e.toString()),
              actions: [
                TextButton(
                  onPressed: () => Navigator.of(context).pop(),
                  child: const Text('OK'),
                ),
              ],
            ),
          );
          return;
        }
...
        TextButton(
          onPressed: () => Navigator.pop(context),
          child: const Text('Annulla'),
        ),
        ElevatedButton(
          onPressed: () => Navigator.pop(context, Duration(hours: hours, minutes: minutes)),
          child: const Text('Conferma'),
        ),
      ],
    );
  }
}

...
