...
            )
                : const Text('Nessuna data specificata'),
          ),
          const SizedBox(width: 15),
          isTripActive
              ? FloatingActionButton(
            key: const Key('newActivityButton'),
            heroTag: 'newActivityButton',
            mini: true,
            onPressed: _showNewActivityOption,
            tooltip: "Aggiungi attività",
            child: const Icon(Icons.add),
          )
...
                                    Positioned(
                                      top: ScreenSize.screenHeight(context) *
                                          0.001,
                                      right: ScreenSize.screenWidth(context) *
                                          0.003,
                                      child: PopupMenuButton<int>(
                                        key: const Key('activityMenu'),
                                        icon: Icon(Icons.more_horiz, color: Theme.of(context).primaryColor),
                                        onSelected: (value) async {
                                          if (value == 1) {
                                            // Azione Modifica
                                            await Navigator.push(
                                              context,
...
                                            value: 1,
                                            child: Row(
                                              children: [
                                                Icon(Icons.edit,
                                                    color: Colors.black),
                                                SizedBox(width: 8),
                                                Text("Modifica"),
                                              ],
                                            ),
                                          ),
                                          const PopupMenuItem<int>(
                                            value: 2,
                                            child: Row(
...
                padding: const EdgeInsets.all(12),
                child: Text(
                  'Crea una nuova attività',
                  style: Theme.of(context).textTheme.titleMedium,
                ),
              ),
              _buildOption(Icons.flight, 'Volo', 'flight'),
              _buildOption(Icons.hotel, 'Alloggio', 'accommodation'),
              _buildOption(
                  Icons.directions_bus, 'Altri Trasporti', 'transport'),
              _buildOption(Icons.attractions, 'Attrazione', 'attraction'),
              const SizedBox(height: 15),
            ],
          ),
        ),
      ),
    );
...
