...
    'India': 'INR',        // Indian Rupee
    'Indonesia': 'IDR',    // Indonesian Rupiah
    'Iran': 'IRR',         // Iranian Rial
    'Iraq': 'IQD',         // Iraqi Dinar
    'Ireland': 'EUR',      // Euro
    'Israel': 'ILS',       // Israeli New Shekel
    'Italy': 'EUR',        // Euro
    'Ivory Coast (Côte d\'Ivoire)': 'XOF', // West African CFA Franc
    'Jamaica': 'JMD',      // Jamaican Dollar
    'Japan': 'JPY',        // Japanese Yen
    'Jordan': 'JOD',       // Jordanian Dinar
    'Kazakhstan': 'KZT',   // Kazakhstani Tenge
    'Kenya': 'KES',        // Kenyan Shilling
...
    'Turkmenistan': 'TMT',   // Turkmenistani Manat
    'Tuvalu': 'AUD',         // Australian Dollar
    'Uganda': 'UGX',         // Ugandan Shilling
    'Ukraine': 'UAH',        // Ukrainian Hryvnia
    'United Arab Emirates': 'AED', // Emirati Dirham
    'United Kingdom': 'GBP', // British Pound Sterling
    'United States': 'USD',  // United States Dollar
    'Uruguay': 'UYU',        // Uruguayan Peso
    'Uzbekistan': 'UZS',     // Uzbekistani Som
    'Vanuatu': 'VUV',        // Vanuatu Vatu
    'Vatican City': 'EUR',   // Euro
    'Venezuela': 'VES',      // Venezuelan Bolívar
    'Vietnam': 'VND',        // Vietnamese Dong
...
      return [];
    }
  }

  Widget formatPopularCurrencies(String currency) {
    const Map<String, String> currencySymbols = {
      'USD': '\$', // US Dollar
      'EUR': '€',  // Euro
      'GBP': '£',  // British Pound
      'JPY': '¥',  // Japanese Yen
      'INR': '₹',  // Indian Rupee
      'CNY': '¥',  // Chinese Yuan
      'RUB': '₽',  // Russian Ruble
...
