...
      child: SingleChildScrollView(
        child: Column(
          mainAxisSize: MainAxisSize.min,
          children: [
            // Nome alloggio
            TextFormField(
              key: const Key('nameField'),
              controller: titleController,
              readOnly: true,
              decoration: const InputDecoration(
                labelText: 'Dove dormirai?',
                prefixIcon: Icon(Icons.hotel),
              ),
...
              ),
            ),
            const SizedBox(height: 20),

            // Selezione date
            TextFormField(
              key: const Key('datesField'),
              readOnly: true,
              controller: TextEditingController(
                text: _startDate != null && _endDate != null
                    ? "${DateFormat('dd/MM/yy').format(_startDate!)} - ${DateFormat('dd/MM/yy').format(_endDate!)}"
                    : '',
              ),
...
                return null;
              },
            ),
            const SizedBox(height: 20),

            ElevatedButton(
              key: const Key('add_button'),
              onPressed: _submitForm,
              style: ElevatedButton.styleFrom(
                backgroundColor: Theme.of(context).primaryColor,
                foregroundColor: Colors.white,
                minimumSize: const Size(double.infinity, 50),
                shape: RoundedRectangleBorder(
...
